--- a/CarwashBooking/templates/admin_all_feedbacks.html
+++ b/CarwashBooking/templates/admin_all_feedbacks.html
@@ -3,6 +3,8 @@
 
 <div class="container mt-4">
     <h3 class="text-primary mb-3">📌 All Customer Feedbacks</h3>
+    <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary mb-3">← Back</a>
+
 
     {% if feedbacks %}
         {% for f in feedbacks %}
