--- a/CarwashBooking/templates/booking_list.html
+++ b/CarwashBooking/templates/booking_list.html
@@ -79,7 +79,7 @@
 
       <!-- PROGRESS BAR -->
       <td>
-        <div class="progress">
+        <div class="progress fw-bold">
           {% if booking.status == 'pending' %}
             <div class="progress-bar bg-warning" style="width: 25%">Pending</div>
           {% elif booking.status == 'accepted' %}
@@ -104,7 +104,11 @@
             <span class="badge bg-primary">Cancelled</span>
 
         {% elif booking.status == "rejected" %}
-         <span class="badge bg-danger">Rejected</span>
+         <button class="btn btn-danger btn-sm"
+        data-bs-toggle="modal"
+        data-bs-target="#reasonModal{{ booking.id }}">
+              View Reason
+          </button>
 
         {% else %}
             <button class="btn btn-warning btn-sm"
@@ -122,6 +126,28 @@
       </td>
 
     </tr>
+    <!-- View Reason Modal -->
+    <div class="modal fade" id="reasonModal{{ booking.id }}" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger text-white">
+        <h5 class="modal-title">Booking Rejected</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body">
+        <p><strong>Reason:</strong></p>
+        <p class="text-muted">
+          {{ booking.rejection_reason|default:"No reason provided" }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+    
+    
 
 
 
